--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Atharva Mhaske</title>
+  <title>Bornil Anurag</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
       padding: 0;
       width: 100%;
       height: 100%;
-      overflow: hidden; 
+      overflow: hidden; /* 👉 Important: NO SCROLLING */
       background: black;
       font-family: 'Poppins', sans-serif;
       color: white;
@@ -29,8 +29,10 @@
       font-family: 'Unna',sans-serif;
       width: 100%;
       padding: 20px 0;
+      background: black;
       display: flex;
       justify-content: center;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
       position: absolute;
       top: 0;
       z-index: 100;
@@ -42,10 +44,7 @@
       gap: 50px;
       padding: 0;
       margin: 0;
-      position: relative;
-      align-items: center;
     }
-
 
     .navbar a {
       color: white;
@@ -55,7 +54,6 @@
       letter-spacing: 0.5px;
       transition: color 0.3s ease;
     }
-
 
     .navbar a::after {
       content: '';
@@ -74,48 +72,6 @@
     .navbar a:hover {
       color: #ccc;
     }
-    .navbar .separator {
-  color: white;
-  opacity: 0.5;
-  font-size: 68px;
-  line-height: 1;
-  user-select: none;
-  pointer-events: none;
-  position: relative;
-  top: -7px;
-}
-
-.navbar .separator::before {
-  content: "—"; /* The actual dash */
-}
-    .separator-with-logo {
-  position: relative;
-  text-align: center;
-}
-
-.separator-with-logo::before {
-  content: "—";
-  font-size: 68px;
-  color: white;
-  opacity: 0.5;
-  display: block;
-  line-height: 1;
-  margin-top: -10px;
-}
-
-.separator-with-logo::after {
-  content: "";
-  position: absolute;
-  top: -30px; /* move logo above the dash */
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100px;
-  height: 100px;
-  background-image: url('logo.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
 
     .video-background {
       position: fixed;
@@ -126,7 +82,6 @@
       z-index: -1;
       object-fit: cover;
     }
-    
 
     .content {
       position: absolute;
@@ -138,14 +93,12 @@
       max-width: 90%;
     }
 
-
     .content h1 {
       font-family: 'Playfair Display', serif;
       font-size: 60px;
       font-weight: 700;
       letter-spacing: 2px;
-      margin-bottom: 0px;
-      padding:0px;
+      margin-bottom: 20px;
     }
 
     .content p {
@@ -153,12 +106,7 @@
       font-weight: 400;
       letter-spacing: 1px;
       color: #ddd;
-      margin: 4px 0;
     }
-    h2, p {
-  margin-top: 4px;
-}
-
 
     footer {
       position: absolute;
@@ -201,26 +149,21 @@
   <nav class="navbar">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li class="separator"></li>
-      <li><a href="showreel.html">Showreel 2023-25</a></li>
-      <li class="separator-with-logo"></li>
+      <li><a href="showreel.html">Showreel 2023</a></li>
       <li><a href="film.html">Filmography</a></li>
-      <li class="separator"></li>
       <li><a href="about.html">About</a></li>
     </ul>
-    
   </nav>
 
   <div class="content">
-    <h1>Atharva Mhaske</h1>
-    <p>Stories that breathe, Stories that believe</p>
-
+    <h1>Bornil Anurag</h1>
+    <p>Director of Photography</p>
   </div>
 
   <footer>
-    Filmmaker based in Mumbai. Currently open for new projects.<br>
-    (M) fotofilms.in@gmail.com (P) +91 9823251314 | +91 7756803800 (I) @samosafoto<br>
-    © 2025 - All rights reserved
+    Freelance Cinematographer based in Mumbai. Currently open for new projects.<br>
+    (M) bornilanuragdp@gmail.com (P) +353 0871892063 | +91 9619531272 (I) @bornilanurag<br>
+    © 2023 - All rights reserved
   </footer>
 
 <script>
