--- a/showreel.html
+++ b/showreel.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Showreel 2023-25 - Atharva Mhaske</title>
+  <title>Showreel 2023 - Bornil Anurag</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
   <style>
     html { scroll-behavior: smooth; }
     body, html { margin: 0; padding: 0; width: 100%; height: 100%; background: black; font-family: 'Poppins', sans-serif; color: white; }
-    .navbar { font-family: 'Unna',sans-serif;width: 100%; padding: 20px 0; display: flex; justify-content: center; position: sticky; top: 15px; z-index: 100; }
+    .navbar { font-family: 'Unna',sans-serif;width: 100%; padding: 20px 0; background: black; display: flex; justify-content: center; border-bottom: 1px solid rgba(255,255,255,0.2); position: sticky; top: 0; z-index: 100; }
     .navbar ul { list-style: none; display: flex; gap: 50px; padding: 0; margin: 0; }
     .navbar a { color: white; text-decoration: none; font-weight: 600; font-size: 18px; letter-spacing: 0.5px; transition: color 0.3s ease; }
     .navbar a::after { content: ''; display: block; width: 0; height: 2px; background: white; transition: width 0.3s; margin-top: 5px; }
@@ -24,21 +24,6 @@
     @keyframes fadeInAnimation { 0% {opacity: 0; transform: translateY(10px);} 100% {opacity: 1; transform: translateY(0);} }
     #scrollTopBtn { display: none; position: fixed; bottom: 40px; right: 30px; z-index: 99; background-color: #ffffff10; border: 1px solid #fff; color: white; cursor: pointer; padding: 10px 14px; border-radius: 50%; font-size: 18px; transition: 0.3s; }
     #scrollTopBtn:hover { background-color: #ffffff20; }
-    .navbar .separator {
-  color: white;
-  opacity: 0.5;
-  font-size: 68px;
-  line-height: 1;
-  user-select: none;
-  pointer-events: none;
-  position: relative;
-  top: -27px;
-}
-
-.navbar .separator::before {
-  content: "—"; /* The actual dash */
-}
-
   </style>
 </head>
 
@@ -47,28 +32,24 @@
 <nav class="navbar">
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li class="separator"></li>
-    <li><a href="showreel.html">Showreel 2023-25</a></li>
-    <li class="separator"></li>
+    <li><a href="showreel.html">Showreel 2023</a></li>
     <li><a href="film.html">Filmography</a></li>
-    <li class="separator"></li>
     <li><a href="about.html">About</a></li>
   </ul>
-  
 </nav>
 
 <div style="flex: 1; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 40px 20px;">
   <div style="width: 1100px; max-width: 90%; aspect-ratio: 16/9; overflow: hidden; border-radius: 8px;">
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zVxVy5550_g?si=ZaveW1i06TsEuTNm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/YCgN-CYsIjY?si=xasj80uZpLPNl9r3" allowfullscreen style="width: 100%; height: 100%; border: none;"></iframe>
   </div>
   <a href="film.html" style="color: white; text-decoration: underline; font-weight: 600; font-size: 18px; margin-top: 20px;">↗ View All Projects</a>
 </div>
 
-  <footer>
-    Filmmaker based in Mumbai. Currently open for new projects.<br>
-    (M) fotofilms.in@gmail.com (P) +91 9823251314 | +91 7756803800 (I) @samosafoto<br>
-    © 2025 - All rights reserved
-  </footer>
+<footer>
+  Freelance Cinematographer based in Mumbai. Currently open for new projects.<br>
+  (M) bornilanuragdp@gmail.com (P) +353 0871892063 | +91 9619531272 (I) @bornilanurag<br>
+  © 2023 - All rights reserved
+</footer>
 
 
 <script>
