About page hyperlinks

--- a/about.html
+++ b/about.html
@@ -97,7 +97,12 @@
     <div style="margin-top: 20px;">
       ✉️ samosafoto@gmail.com <br>
       📞 +91 9823251314 <br>
+       <a href="https://www.youtube.com/@samosafoto" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">
+      ▶️ @samosafoto<br>
+      </a>
+      <a href="https://www.instagram.com/samosafoto/" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">
       📸 @samosafoto<br>
+      </a>
       <a href="https://drive.google.com/file/d/1SsmpbKDY_m6ONrqOVCESx5x8cp8-N9Ou/view?usp=sharing" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">↗ View Resume</a>
     </div>
   </div>
