--- a/about.html
+++ b/about.html
@@ -66,6 +66,17 @@
     @keyframes fadeInAnimation { 0% {opacity: 0; transform: translateY(10px);} 100% {opacity: 1; transform: translateY(0);} }
     #scrollTopBtn { display: none; position: fixed; bottom: 40px; right: 30px; z-index: 99; background-color: #ffffff10; border: 1px solid #fff; color: white; cursor: pointer; padding: 10px 14px; border-radius: 50%; font-size: 18px; transition: 0.3s; }
     #scrollTopBtn:hover { background-color: #ffffff20; }
+         a {
+      color:white; 
+      text-decoration: none; 
+    }
+
+    a:visited,
+    a:hover,
+    a:active,
+    a:focus {
+      color: white; 
+    }
   </style>
 </head>
 
@@ -106,8 +117,8 @@
       <a href="https://drive.google.com/file/d/1SsmpbKDY_m6ONrqOVCESx5x8cp8-N9Ou/view?usp=sharing" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">↗ View Resume</a>
     </div>
   </div>
-  <div style="flex: 1; min-width: 300px;">
-    <img src="your-image.jpg" alt="Bornil Anurag at work" style="width: 100%; border-radius: 8px;">
+  <div style="flex: 1; min-width: 300px; margin-top: -70px;">
+    <img src="yourimage.png" alt="" style="width: 50%; border-radius: 8px;opacity:70% ;">
   </div>
 </div>
 
