--- a/film.html
+++ b/film.html
@@ -131,7 +131,7 @@
     <div>
     <a href="https://www.linkedin.com/feed/update/urn:li:activity:7288498817484619776/?updateEntityUrn=urn%3Ali%3Afs_updateV2%3A%28urn%3Ali%3Aactivity%3A7288498817484619776%2CFEED_DETAIL%2CEMPTY%2CDEFAULT%2Cfalse%29&originTrackingId=JVqTuV3CSnG%2FQ2ssz%2Bb%2BYg%3D%3D">
     <img src="film5.jpg" alt="Film 5">
-    <p>05.  Ajio Luxe Wkend 2025 - Day 1 Ramp Walk Edit | 2025</p>
+    <p>05.  Ajio Luxe Wkend 2025 - Ramp Walk Edit | 2025</p>
     </a>
   </div>
       <!--Film 6-->
