--- a/index.html
+++ b/index.html
@@ -123,9 +123,8 @@
       top: 50%;
       left: 50%;
       transform:translate(-50%,-50%);
-      width: 100vw;
-      height: auto;
-      min-height:100vh;
+      width: 98vw;
+      height: 98vh;
       z-index: -1;
     }
     
@@ -196,7 +195,7 @@
 <body>
 
   <video autoplay muted loop playsinline class="video-background">
-    <source src="newshowreel.mp4" type="video/mp4">
+    <source src="showreel2.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
 
