--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
 <body>
 
-  <video autoplay muted loop playsinline class="video-background">
+  <video autoplay muted loop playsinline preload="auto" class="video-background">
     <source src="showreel2.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
@@ -213,9 +213,7 @@
   </nav>
 
   <div class="content">
-    <h1>Atharva Mhaske</h1>
-    <p>Stories that breathe, Stories that believe</p>
-
+    <img src="home page atharva mhaske text.png">
   </div>
 
   <footer>
