--- a/about.html
+++ b/about.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About - Atharva Mhaske</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <style>
@@ -83,15 +85,15 @@
 <body>
 
 <nav class="navbar">
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li class="separator"></li>
-    <li><a href="showreel.html">Showreel 2023-25</a></li>
-    <li class="separator-with-logo"></li>
-    <li><a href="film.html">Filmography</a></li>
-    <li class="separator"></li>
-    <li><a href="about.html">About</a></li>
-  </ul>
+    <ul>
+      <li class="custom-font"><a href="index.html">Home</a></li>
+      <li class="separator"></li>
+      <li class="custom-font"><a href="showreel.html">Showreel 2023-25</a></li>
+      <li class="separator-with-logo"></li>
+      <li class="custom-font"><a href="film.html">Filmography</a></li>
+      <li class="separator"></li>
+      <li class="custom-font"><a href="about.html">About</a></li>
+    </ul>
   
 </nav>
 
@@ -118,7 +120,7 @@
     </div>
   </div>
   <div style="flex: 1; min-width: 300px; margin-top: -70px;">
-    <img src="yourimage.png" alt="" style="width: 50%; border-radius: 8px;opacity:70% ;">
+    <img src="yourimage.png" alt="" style="width: 100%; max-width: 300px; border-radius: 8px; opacity:70%;">
   </div>
 </div>
 
