--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -118,15 +120,15 @@
 }
 
 
-    .video-background {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform:translate(-50%,-50%);
-      width: 98vw;
-      height: 98vh;
-      z-index: -1;
-    }
+.video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+}
     
 
     .content {
@@ -136,30 +138,8 @@
       transform: translate(-50%, -50%);
       text-align: center;
       z-index: 5;
-      max-width: 90%;
+      max-width: 95vw;
     }
-
-
-    .content h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 60px;
-      font-weight: 700;
-      letter-spacing: 2px;
-      margin-bottom: 0px;
-      padding:0px;
-    }
-
-    .content p {
-      font-size: 22px;
-      font-weight: 400;
-      letter-spacing: 1px;
-      color: #ddd;
-      margin: 4px 0;
-    }
-    h2, p {
-  margin-top: 4px;
-}
-
 
     footer {
       position: absolute;
@@ -201,19 +181,19 @@
 
   <nav class="navbar">
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li class="custom-font"><a href="index.html">Home</a></li>
       <li class="separator"></li>
-      <li><a href="showreel.html">Showreel 2023-25</a></li>
+      <li class="custom-font"><a href="showreel.html">Showreel 2023-25</a></li>
       <li class="separator-with-logo"></li>
-      <li><a href="film.html">Filmography</a></li>
+      <li class="custom-font"><a href="film.html">Filmography</a></li>
       <li class="separator"></li>
-      <li><a href="about.html">About</a></li>
+      <li class="custom-font"><a href="about.html">About</a></li>
     </ul>
     
   </nav>
 
   <div class="content">
-    <img src="home page atharva mhaske text.png">
+    <img src="home page atharva mhaske text.png" style="width: 90vw; max-width: 800px; height: auto;">
   </div>
 
   <footer>
