--- a/showreel.html
+++ b/showreel.html
@@ -7,6 +7,8 @@
   <title>Showreel 2023-25 - Atharva Mhaske</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -73,15 +75,15 @@
 <body>
 
 <nav class="navbar">
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li class="separator"></li>
-    <li><a href="showreel.html">Showreel 2023-25</a></li>
-    <li class="separator-with-logo"></li>
-    <li><a href="film.html">Filmography</a></li>
-    <li class="separator"></li>
-    <li><a href="about.html">About</a></li>
-  </ul>
+    <ul>
+      <li class="custom-font"><a href="index.html">Home</a></li>
+      <li class="separator"></li>
+      <li class="custom-font"><a href="showreel.html">Showreel 2023-25</a></li>
+      <li class="separator-with-logo"></li>
+      <li class="custom-font"><a href="film.html">Filmography</a></li>
+      <li class="separator"></li>
+      <li class="custom-font"><a href="about.html">About</a></li>
+    </ul>
   
 </nav>
 
