--- a/index.html
+++ b/index.html
@@ -110,15 +110,20 @@
   position: absolute;
   top: -25px; /* move logo above the dash */
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) scale(1);
   width: 87px;
   height: 87px;
   background-image: url('logo.png');
   background-size: contain;
   background-repeat: no-repeat;
   opacity: 80%;
+  transition: transform 0.3s ease;
 }
-
+.separator-with-logo:hover::after {
+  transform: translateX(-50%) scale(1.1);
+  transition: transform 0.5s ease;
+  opacity: 90%;
+}
 
 .video-background {
   position: fixed;
@@ -131,16 +136,27 @@
 }
     
 
-    .content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      z-index: 5;
-      max-width: 95vw;
-    }
+.wrapper {
+  height: 100vh;           
+  display: flex;
+  justify-content: center;  
+  align-items: center;       
+  padding: 0 10px;            
+}
 
+.content {
+  max-width: 600px;
+  width: 90vw;
+  height: auto;
+  display: block;
+  transition: transform 0.5s ease, opacity 0.5s ease;
+  transform-origin: center center;
+}
+
+.content:hover {
+  transform: scale(1.05);
+  opacity: 0.85;
+}
     footer {
       position: absolute;
       bottom: 10px;
@@ -191,10 +207,12 @@
     </ul>
     
   </nav>
-
-  <div class="content">
-    <img src="home page atharva mhaske text.png" style="width: 90vw; max-width: 800px; height: auto;">
+  <body>
+  <div class="wrapper">
+    <img class="content" src="croppedhome.png" alt="">
   </div>
+</body>
+
 
   <footer>
     Filmmaker based in Mumbai. Currently open for new projects.<br>
