--- a/film.html
+++ b/film.html
@@ -45,7 +45,7 @@
   <!-- Film 1 -->
    <div class="film-row">
   <div class="film-card">
-    <a href="https://www.youtube.com/watch?v=cLlyVMPK3Eg&ab_channel=Jagnetics">
+    <a href="films/Film1.html">
     <img src="film1.jpg" alt="Film 1">
     <p>01. Scoop of Ignorance | 2024</p>
   </a>
@@ -53,7 +53,7 @@
 
   <!-- Film 2 -->
   <div class="film-card-right">
-    <a href="https://www.imdb.com/title/tt11999332/">
+    <a href="films/Film2.html">
     <img src="film2.jpg" alt="Film 2">
     <p>02. The Story of Vadapav | 2022</p>
     </a>
@@ -63,30 +63,30 @@
   <!-- Film 3 (spans first column only) -->
    <div class="film-row">
   <div class="film-card">
-    <a href="https://youtu.be/t9pKTfRAZF0">
+    <a href="films/Film3.html">
     <img src="film3.jpg" alt="Film 3">
     <p>03.  Soul of a Sapling | 2024</p>
     </a>
   </div>
   <!--Film 4-->
   <div class="film-card-right">
-    <a href="https://www.linkedin.com/feed/update/urn:li:activity:7288497327906959361/?updateEntityUrn=urn%3Ali%3Afs_updateV2%3A%28urn%3Ali%3Aactivity%3A7288497327906959361%2CFEED_DETAIL%2CEMPTY%2CDEFAULT%2Cfalse%29&originTrackingId=HKTf3DwbSxWIghT8aFutwQ%3D%3D">
+    <a href="films/Film4.html">
     <img src="film4.jpg" alt="Film 4">
-    <p>04.  Jio World Plaza - 1 Year Anniversary Video | 2024</p>
+    <p>04.  Jio World Plaza - 1 Year Anniversary | 2024</p>
     </a>
   </div>
   </div>
     <!--Film 5-->
        <div class="film-row">
   <div class="film-card">
-    <a href="https://www.linkedin.com/feed/update/urn:li:activity:7288498817484619776/?updateEntityUrn=urn%3Ali%3Afs_updateV2%3A%28urn%3Ali%3Aactivity%3A7288498817484619776%2CFEED_DETAIL%2CEMPTY%2CDEFAULT%2Cfalse%29&originTrackingId=JVqTuV3CSnG%2FQ2ssz%2Bb%2BYg%3D%3D">
+    <a href="films/Film5.html">
     <img src="film5.jpg" alt="Film 5">
-    <p>05.  Ajio Luxe Wkend 2025 - Ramp Walk Edit | 2025</p>
+    <p>05.  Ajio Luxe Wkend 2025 - Ramp Walk | 2025</p>
     </a>
   </div>
       <!--Film 6-->
   <div class="film-card-right">
-    <a href="https://www.youtube.com/watch?v=w9T7EmAP-kY&t=42s&ab_channel=samosafoto">
+    <a href="films/Film6.html">
     <img src="film6.jpg" alt="Film 6">
     <p>06.  Naggar Castle & People - Manali Short Documentary  | 2024</p>
     </a>
