--- a/index.html
+++ b/index.html
@@ -16,19 +16,27 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden; 
-      background: black;
-      font-family: 'Poppins', sans-serif;
-      color: white;
-    }
-.navbar{
-  position:absolute;
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  overflow-y: scroll;  /* This keeps width consistent with pages that scroll */
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /* Locks scrolling */
+}
+
+    
+
 .video-background {
   position: fixed;
   top: 50%;
@@ -98,7 +106,7 @@
   position: fixed; /* or absolute */
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url('your-image.jpg');
   background-size: cover;
