--- a/film.html
+++ b/film.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Filmography - Atharva Mhaske</title>
+  <link rel="icon" type="Image/png" href="logo.png">
    <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,13 +14,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     html { scroll-behavior: smooth; }
-    body, html { margin: 0; padding: 0; width: 100%; height: 100%; background: black; font-family: 'Poppins', sans-serif; color: white; }
+    body, html { margin: 0; padding: 0; width: 100%; height: 100%; background: black; font-family: 'Poppins', sans-serif; color: white;}
     footer { text-align: center; font-size: 12px; line-height: 1.5; color: #aaa; padding: 20px; margin-top: 50px; }
     body.fade-in { animation: fadeInAnimation ease 1s; animation-iteration-count: 1; animation-fill-mode: forwards; }
     @keyframes fadeInAnimation { 0% {opacity: 0; transform: translateY(10px);} 100% {opacity: 1; transform: translateY(0);} }
     #scrollTopBtn { display: none; position: fixed; bottom: 40px; right: 30px; z-index: 99; background-color: #ffffff10; border: 1px solid #fff; color: white; cursor: pointer; padding: 10px 14px; border-radius: 50%; font-size: 18px; transition: 0.3s; }
     #scrollTopBtn:hover { background-color: #ffffff20; }
-
 
   </style>
 </head>
@@ -28,11 +28,11 @@
 
 <nav class="navbar">
     <ul>
-      <li class="custom-font"><a href="index.html">Home</a></li>
+      <li class="custom-font"><a href="/">Home</a></li>
       <li class="separator"></li>
-      <li class="custom-font"><a href="showreel.html">Showreel 2023-25</a></li>
+      <li class="custom-font"><a href="showreel.html">Showreel</a></li>
       <li class="separator-with-logo"></li>
-      <li class="custom-font"><a href="film.html">Filmography</a></li>
+      <li class="custom-font"><a href="film.html">Projects</a></li>
       <li class="separator"></li>
       <li class="custom-font"><a href="about.html">About</a></li>
     </ul>
@@ -46,7 +46,7 @@
    <div class="film-row">
   <div class="film-card">
     <a href="films/Film1.html">
-    <img src="film1.jpg" alt="Film 1">
+    <img src="films/FilmStills/poster.png" alt="Film 1">
     <p>01. Scoop of Ignorance | 2024</p>
   </a>
   </div>
@@ -54,7 +54,7 @@
   <!-- Film 2 -->
   <div class="film-card-right">
     <a href="films/Film2.html">
-    <img src="film2.jpg" alt="Film 2">
+    <img src="films/FilmStills/Vadapav_Poster.webp" alt="Film 2">
     <p>02. The Story of Vadapav | 2022</p>
     </a>
   </div>
@@ -64,7 +64,7 @@
    <div class="film-row">
   <div class="film-card">
     <a href="films/Film3.html">
-    <img src="film3.jpg" alt="Film 3">
+    <img src="films/FilmStills/SOS_Poster.png" alt="Film 3">
     <p>03.  Soul of a Sapling | 2024</p>
     </a>
   </div>
@@ -87,7 +87,7 @@
       <!--Film 6-->
   <div class="film-card-right">
     <a href="films/Film6.html">
-    <img src="film6.jpg" alt="Film 6">
+    <img src="films/FilmStills/Naggar_Poster.jpg" alt="Film 6">
     <p>06.  Naggar Castle & People - Manali Short Documentary  | 2024</p>
     </a>
   </div>
@@ -99,7 +99,7 @@
 
 <footer>
   Filmmaker based in Mumbai. Currently open for new projects.<br>
-  (M) fotofilms.in@gmail.com (P) +91 9823251314 | +91 7756803800 (I) @samosafoto<br>
+  (M) hi@atharvamhaske.com (P) +91 9823251314 | +91 7756803800 (I) @samosafoto<br>
   © 2025 - All rights reserved
 </footer>
 
