--- a/films/Film1.html
+++ b/films/Film1.html
@@ -23,15 +23,23 @@
 .film-content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 20%;
-  max-width: 1200px;
+  gap: 8%;
+  max-width: 1500px;
   margin: 10px 50px 75px;
   padding: 0 30px;
 }
     .film-column {
       flex: 1 1 30%;
       min-width: 280px;
-      max-width: 400px;
+      max-width: 700px;
+    }
+      .film-column1 {
+      flex: 1 1 30%;
+      min-width: 380px;
+      max-width: 700px;
+    }
+      .film-column1 ul{
+      line-height:1.75 ;
     }
     .film-column h2 {
       font-weight: 700;
@@ -132,7 +140,7 @@
   </nav>
 
   <!-- Hero Image -->
-  <img src="../croppedhome.png" alt="Scoop of Ignorance" class="hero-image" />
+  <img src="FilmStills/header.jpg" alt="Scoop of Ignorance" class="hero-image" />
   <div class="custom-font">
      <h1 class="film-title">Scoop of Ignorance</h1>
    </div>
@@ -142,6 +150,7 @@
  
     <p>2024<br>
     Producer / Sound Designer<br>
+    Atharva Mhaske
   </div>
 
   <div class="film-column">
@@ -152,9 +161,45 @@
   </div>
 
   <div class="film-column">
-    <h3 class="film-subtitle"></h3><!--Optional to add Credits-->
-    <p>
+    <h3 class="film-subtitle">Credits</h3><!--Optional to add Credits-->
+    <p> 
+Written & Directed by
+Vardhaman Abad
+
+Produced by
+Atharva Mhaske<br>
+
+Director of Photography
+Sarvesh Peshkar<br>
+
+Edited by
+Vardhaman Abad & Tanishq Bhawnani<br>
+
+Sound Design by
+Atharva Mhaske<br>
+
+DI & VFX by
+Vardhaman Abad<br>
     </p>
+  </div >
+  <div class="film-column1">
+      <h3 class="film-subtitle"> Awards</h3>
+      <ul>
+    <li>International Kolkata Short Film Festival<br>
+Official Award Winner – PSA<br></li>
+
+<li>Goa Short Film Festival — Goa, India<br>
+Official Award Winner – Best Advertisement Film<br></li>
+
+<li>11th Pink City International Short Film Festival<br>
+Official Award Winner<br></li>
+
+<li>Miami 4 Social Change Youth Film Festival<br>
+Official Award Winner – PSA<br></li>
+
+<li>Open Festival Marseille — Marseille, France<br>
+Official Selection<br></li>
+</ul>
   </div>
 </div>
 
@@ -178,14 +223,10 @@
 
   <!-- Screenshot Grid -->
   <div class="screenshot-grid">
-    <img src="btw1.jpg" alt="Screenshot 1" />
-    <img src="btw2.jpg" alt="Screenshot 2" />
-    <img src="btw3.jpg" alt="Screenshot 3" />
-    <img src="btw4.jpg" alt="Screenshot 4" />
-    <img src="btw5.jpg" alt="Screenshot 5" />
-    <img src="btw6.jpg" alt="Screenshot 6" />
-    <img src="btw7.jpg" alt="Screenshot 7" />
-    <img src="btw8.jpg" alt="Screenshot 8" />
+    <img src="FilmStills/SOISC.jpg" alt="Screenshot 1" />
+    <img src="FilmStills/SOISC1.jpg" alt="Screenshot 2" />
+    <img src="FilmStills/SOISC2.jpg" alt="Screenshot 3" />
+    <img src="FilmStills/SOISC3.jpg" alt="Screenshot 4" />
   </div>
 
   <!-- Navigation Bar -->
