--- a/showreel.html
+++ b/showreel.html
@@ -27,11 +27,11 @@
 
 <nav class="navbar">
     <ul>
-      <li class="custom-font"><a href="index.html">Home</a></li>
+      <li class="custom-font"><a href="/">Home</a></li>
       <li class="separator"></li>
-      <li class="custom-font"><a href="showreel.html">Showreel 2023-25</a></li>
+      <li class="custom-font"><a href="showreel.html">Showreel</a></li>
       <li class="separator-with-logo"></li>
-      <li class="custom-font"><a href="film.html">Filmography</a></li>
+      <li class="custom-font"><a href="film.html">Projects</a></li>
       <li class="separator"></li>
       <li class="custom-font"><a href="about.html">About</a></li>
     </ul>
@@ -46,9 +46,9 @@
 </div>
 
   <footer>
-    Filmmaker based in Mumbai. Currently open for new projects.<br>
-    (M) fotofilms.in@gmail.com (P) +91 9823251314 | +91 7756803800 (I) @samosafoto<br>
-    © 2025 - All rights reserved
+  Filmmaker based in Mumbai. Currently open for new projects.<br>
+  (M) hi@atharvamhaske.com (P) +91 9823251314 | +91 7756803800 (I) @samosafoto<br>
+  © 2025 - All rights reserved
   </footer>
 
 
