--- a/about.html
+++ b/about.html
@@ -26,11 +26,11 @@
 
 <nav class="navbar">
     <ul>
-      <li class="custom-font"><a href="index.html">Home</a></li>
+      <li class="custom-font"><a href="/">Home</a></li>
       <li class="separator"></li>
-      <li class="custom-font"><a href="showreel.html">Showreel 2023-25</a></li>
+      <li class="custom-font"><a href="showreel.html">Showreel</a></li>
       <li class="separator-with-logo"></li>
-      <li class="custom-font"><a href="film.html">Filmography</a></li>
+      <li class="custom-font"><a href="film.html">Projects</a></li>
       <li class="separator"></li>
       <li class="custom-font"><a href="about.html">About</a></li>
     </ul>
@@ -56,7 +56,7 @@
       <a href="https://www.instagram.com/samosafoto/" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">
       📸 @samosafoto<br>
       </a>
-      <a href="https://drive.google.com/file/d/1SsmpbKDY_m6ONrqOVCESx5x8cp8-N9Ou/view?usp=sharing" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">↗ View Resume</a>
+      <a href="https://drive.google.com/file/d/1WjcUfoMjBxIz_oD3jWXTUhrW1IVsf0zi/view?usp=sharing" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">↗ View Resume</a>
     </div>
   </div>
   <div style="flex: 1; min-width: 300px; margin-top: -70px;">
@@ -66,7 +66,7 @@
 
 <footer>
   Filmmaker based in Mumbai. Currently open for new projects.<br>
-  (M) fotofilms.in@gmail.com (P) +91 9823251314 | +91 7756803800 (I) @samosafoto<br>
+  (M) hi@atharvamhaske.com (P) +91 9823251314 | +91 7756803800 (I) @samosafoto<br>
   © 2025 - All rights reserved
 </footer>
 
